charts/kuard-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: NodePort
  selector:
    app: kuard
  ports:
    - port: 80 # The port that this service should serve on.
      targetPort: 8080 # This is the port that the container listens on
      nodePort: 30080 # This is the port that the service will be exposed on
